# valet

./: .gitignore  Program.cs  README.md  build.py  nlp.csproj  valet.sln
Valet/Valet_Dashboard/: DashBoard.Designer.cs  DashBoard.cs  Dictionary.Designer.cs  Dictionary.cs  Floating_Menu.Designer.cs  Floating_Menu.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Settings.Designer.cs  Settings.cs  Valet_Dashboard.csproj  Valet_Dashboard.sln
Valet/Valet_Dashboard/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Valet_UI/: .gitignore  App.config  Dashboard.Designer.cs  Dashboard.cs  Dictionary.Designer.cs  Dictionary.cs  FloatingWindow.Designer.cs  FloatingWindow.cs  FloatingWindow.resx  Form1.Designer.cs  Form1.cs  GlobalSettings.cs  NotificationWindow.Designer.cs  NotificationWindow.cs  Program.cs  Settings.Designer.cs  Settings.cs  ShortCuts.cs  Valet_UI.csproj
Valet_UI/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
Valet_UI/stt/: vosk_stt.py
Valet_nix/: .gitignore  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Valet_nix.csproj  ViewLocator.cs  app.manifest
Valet_nix/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Valet_nix/Views/: MainWindow.axaml  MainWindow.axaml.cs
Valet_nix/stt/: .gitignore  Valet_nix  vosk_stt.py
nlp/: .gitignore  Makefile  Program.cs  Program_nix.cs  README.md  nlp.csproj
nlp/stt/: vosk_stt.py
nlp/stt/win-x64/: nlp.deps.json  nlp.runtimeconfig.json  shortCuts.deps.json  shortcutsWinForm.deps.json
python_stt/: tmux_script.py
shortCuts/: Program.cs  ShortCuts.cs  Shortcuts.csproj  program.cs  shortCuts.csproj
shortcutsWinForm/: Form1.Designer.cs  Form1.cs  Program.cs
stt/: Program.cs  stt.csproj
twm/: .gitignore  .gitlab-ci.yml  configure.ac  meson.build
twm/man/: meson.build
twm/src/: events.c  list.c  list.h  menus.c  meson.build  session.c  session.h  test.sh  twm.c  util.c  util.h
valet_dashboard/: Form1.Designer.cs  Form1.cs  Program.cs  valet_dashboard.csproj  valet_dashboard.sln
vosk_stt/: Program.cs
